feat: support build markdown to html

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "toamto-doc",
   "description": "doc for tomatobang",
-  "version": "0.1",
+  "version": "0.0.1",
   "author": "Yi Peng <yipeng.info@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
-    "gatsby-plugin-react-helmet": "^1.0.8"
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-remark": "^1.7.26"
   },
   "keywords": [
     "tomatobang"
